@@ -8,8 +8,11 @@ DIST jdk-7-ea-bin-b15-linux-amd64-05_jul_2007.bin 56028183 RMD160 7c6a0703f373a3
 DIST jdk-7-ea-bin-b15-linux-i586-05_jul_2007.bin 62643227 RMD160 6929643b66d84d2978d67106c1bb1817ae6ef4c4 SHA1 d1e524559f5c54eee84edd95272924a237b3ff82 SHA256 280134f713ffd1423735481798ff02e86bc2d9ab1dc729b9d9b537721e4c4d20
 DIST jdk-7-ea-bin-b16-linux-amd64-20_jul_2007.bin 56059556 RMD160 d78e8a0c7cb44048e2a4ead513d8825be84a8f5b SHA1 b8ecf37ef49a653b9657282374dbbe9bcad0eee7 SHA256 ac8c5a780e57450999a0915834cc1657353b98c6f52b8c4c0dd121075322dbad
 DIST jdk-7-ea-bin-b16-linux-i586-20_jul_2007.bin 62802744 RMD160 62abf1a5198be886326437f4d2affcae07a5eca4 SHA1 d1b7f0363117753ceb0b471f646d60b4eaece079 SHA256 11f47a5d11559f251585a826c8b9a9db4e163d72866b61ed811f923e7e59fc14
+DIST jdk-7-ea-bin-b18-linux-amd64-16_aug_2007.bin 56157159 RMD160 380fb6b749691be3b5e9da1122d6b6f9252d6df8 SHA1 6e6e9ad3f879b780dc319b673d0c85fa06d70876 SHA256 c9f1b4847d5ba5d9d4e18abfaf45ed366319bfdc417fa9d7ffcc6975a189ae31
+DIST jdk-7-ea-bin-b18-linux-i586-16_aug_2007.bin 62885035 RMD160 d18721bd8f78fa1128ae1f9d552c1479c854c141 SHA1 6036b9f426e60a8b5cc9438982f7ad0d83ddf049 SHA256 477d09408f27ad1924480b48cb3d379ce525aa220a585ce754893cdd535d0dff
 EBUILD sun-jdk-1.7.0.0_alpha13.ebuild 4873 RMD160 1d78dad22213b301a070c7b8bd0a78681990dabf SHA1 b7337473702fd386ced1a531b64311df9866acbe SHA256 808082527437af2f82da0825be29069711fad716b9e4cd2d0e5ef22b120f1a55
 EBUILD sun-jdk-1.7.0.0_alpha14.ebuild 4932 RMD160 343033524172a19b96d670636fa13ebf5380daee SHA1 106a3700084bcf0724fe91fa283bb2319a777ebb SHA256 6644966378ce563625cf2f53023bbdc24587abb8294bacc2b35fce48901236d7
 EBUILD sun-jdk-1.7.0.0_alpha15.ebuild 4932 RMD160 832a3c5e5cc9c463417935e721a7a344c0e75e85 SHA1 4a3ca78747d993d59bbb05517d71a0c4027bf65f SHA256 76fb480e97b921b5a4cb53ea0b32d3d7ad8f758f14f6164461d2ad5addda7931
 EBUILD sun-jdk-1.7.0.0_alpha16.ebuild 4932 RMD160 312469dc78bdeed884998ef51074fea4ece54b06 SHA1 85d0b34dfb25f763d3f7619993f73c0757dbb3a1 SHA256 2ce8ef81adfdbeb6ee2966a44a8e5b6457fc3df2a543afa08096362b855cf887
-MISC ChangeLog 5545 RMD160 c94c935f1470f6bbbd83d0c5e98c8d550167f479 SHA1 724784b3b33cae4de8a1268023f4fb948e96cf75 SHA256 39bd811881be204682cb55654a724a5072ce9a3ea10c5e1a40f4069713c9643b
+EBUILD sun-jdk-1.7.0.0_alpha18.ebuild 4932 RMD160 a8b4f0fa1c741edb0f2bdcfe1ba5a8b19119c621 SHA1 931b37b70ca9a6c8073af8a832fb1672cde62a03 SHA256 36d712d07c65e3af49090f93ab1f3530e29f8140a3ada438ea61549cc7cf8beb
+MISC ChangeLog 5691 RMD160 74f9e94499ffbf30fcc6921912663ddd7c284da6 SHA1 91a2b6cb922bfc55d6700852ca65faace3840091 SHA256 16c97a43bb40e7d8602f2e3796249c47c271645a10c448af776c7aee5eb5ac15
